# oikb

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker.yml
docs/: guide.md
src/oikb/: __init__.py  cli.py  client.py  config.py  daemon.py  env.py  history.py  ignore.py  logging.py  metrics.py  sync.py  watcher.py  webhooks.py
src/oikb/connectors/: __init__.py  airtable.py  asana.py  azure_blob.py  bitbucket.py  bookstack.py  clickup.py  confluence.py  discord.py  discourse.py  document360.py  dokuwiki.py  dropbox.py  egnyte.py  filesystem.py  fireflies.py  freshdesk.py  gcs.py  gdrive.py  gitbook.py  github.py  gitlab.py  gmail.py  gong.py  google_sites.py  guru.py  hubspot.py  jira.py  linear.py  nextcloud.py  notion.py  oracle_storage.py  outline.py  productboard.py  r2.py  s3.py  salesforce.py  servicenow.py  sharepoint.py  slab.py  (+6 more)
