[project]
name = "oikb"
version = "0.1.0"
description = "CLI tool for syncing content to Open WebUI Knowledge Bases"
readme = "README.md"
authors = [
    { name = "Tim Baek", email = "tim@openwebui.com" }
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
github = ["httpx"]
s3 = ["boto3>=1.34"]
all = ["boto3>=1.34"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
oikb = "oikb.cli:cli"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
