[project]
name = "oikb"
version = "0.1.3"
description = "Sync anything to Open WebUI Knowledge Bases"
readme = "README.md"
authors = [
    { name = "Tim Baek", email = "tim@openwebui.com" }
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
github = ["httpx"]
gitlab = ["httpx"]
bitbucket = ["httpx"]
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.14"]
azure = ["azure-storage-blob>=12.19"]
dropbox = ["dropbox>=12.0"]
r2 = ["boto3>=1.34"]
gdrive = ["google-api-python-client>=2.100", "google-auth>=2.25"]
gmail = ["google-api-python-client>=2.100", "google-auth>=2.25"]
confluence = ["httpx"]
notion = ["httpx"]
bookstack = ["httpx"]
discourse = ["httpx"]
gitbook = ["httpx"]
guru = ["httpx"]
slack = ["httpx"]
discord = ["httpx"]
teams = ["httpx"]
jira = ["httpx"]
linear = ["httpx"]
asana = ["httpx"]
clickup = ["httpx"]
zendesk = ["httpx"]
freshdesk = ["httpx"]
airtable = ["httpx"]
hubspot = ["httpx"]
salesforce = ["httpx"]
sharepoint = ["httpx"]
web = ["beautifulsoup4>=4.12"]
all = [
    "boto3>=1.34",
    "google-cloud-storage>=2.14",
    "azure-storage-blob>=12.19",
    "dropbox>=12.0",
    "google-api-python-client>=2.100",
    "google-auth>=2.25",
    "beautifulsoup4>=4.12",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
oikb = "oikb.cli:cli"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
