[project]
name = "oikb"
version = "0.2.8"
description = "Sync anything to Open WebUI Knowledge Bases"
readme = "README.md"
authors = [
    { name = "Tim Baek", email = "tim@openwebui.com" }
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "click>=8.1",
    "croniter>=2.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
    "rich>=13.0",
    "watchdog>=4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.14"]
azure = ["azure-storage-blob>=12.19"]
dropbox = ["dropbox>=12.0"]
r2 = ["boto3>=1.34"]
gdrive = ["google-api-python-client>=2.100", "google-auth>=2.25"]
gmail = ["google-api-python-client>=2.100", "google-auth>=2.25"]
gsites = ["google-api-python-client>=2.100", "google-auth>=2.25"]
web = ["beautifulsoup4>=4.12"]
oracle = ["oci"]
all = [
    "boto3>=1.34",
    "google-cloud-storage>=2.14",
    "azure-storage-blob>=12.19",
    "dropbox>=12.0",
    "google-api-python-client>=2.100",
    "google-auth>=2.25",
    "beautifulsoup4>=4.12",
    "oci",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
oikb = "oikb.cli:cli"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
